[package]
name    = "twitch-notify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow          = "1.0.65"
eframe          = { version = "0.19.0", features = ["persistence"] }
egui            = "0.19.0"
egui_extras     = { version = "0.19.0", features = ["image"] }
flume           = { version = "0.10.14", default-features = false, features = ["async"] }
image           = { version = "0.24.4", features = ["png", "jpeg"], default-features = false }
once_cell       = "1.15.0"
reqwest         = { version = "0.11.12", features = ["json"] }
serde           = { version = "1.0.145", features = ["derive"] }
serde_json      = "1.0.86"
simple_env_load = "0.2.0"
time            = { version = "0.3.15", features = ["local-offset", "parsing", "formatting", "macros"] }
tokio           = { version = "1.21.2", features = ["rt", "rt-multi-thread", "sync", "macros"] }
tokio-stream    = "0.1.11"

[profile.dev.package.eframe]
opt-level = 3

[profile.dev.package.egui]
opt-level = 3

[profile.dev.package.egui_extras]
opt-level = 3

[profile.dev.package.image]
opt-level = 3

[patch.crates-io]
eframe     = { git = "https://github.com/museun/egui/", rev = "f07e59eebc5095eacb52f2b7a930618cddb873be" }
egui       = { git = "https://github.com/museun/egui/", rev = "f07e59eebc5095eacb52f2b7a930618cddb873be" }
egui-winit = { git = "https://github.com/museun/egui/", rev = "f07e59eebc5095eacb52f2b7a930618cddb873be" }
